--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <!-- Link icone -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-********************" crossorigin="anonymous">
+
+  
     
    <title>Document</title>
   </head>
@@ -42,7 +45,16 @@
           <a href="" class="">Cadastre-se</a>
           <a href="" class="">Esqueci minha senha</a>
         </div>
+
+        <script src="JS/script.js"></script>
+        <div class="d-flex justify-content-center bnt-dark-mode">
+        <input type="checkbox" class="checkbox" id="cbx">
+        <label for="cbx" class="label">
+          <i class="fas fa-moon"></i>
+          <i class="fas fa-sun"></i>
+          <div class="ball"></div>
+        </label>
       </div>
-    </div>
+   
   </body>
 </html>
