--- a/login.html
+++ b/login.html
@@ -9,15 +9,13 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <!-- Link icone -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-********************" crossorigin="anonymous">
-
-  
-    
-   <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-********************" crossorigin="anonymous">    
+   <title>Página de login</title>
   </head>
   <body>
     <div class="container">
       <h2>Login</h2>
+      <form action="">
         <input
           type="text"
           placeholder="Nome de usuário"
@@ -32,7 +30,7 @@
         ></input>
         <input type="submit" value="Entrar" />
       </form>
-
+      
       <div>
         <form action="">
           <div class="d-flex justify-content-center my-custom-btn">
@@ -46,15 +44,7 @@
           <a href="" class="">Esqueci minha senha</a>
         </div>
 
-        <script src="JS/script.js"></script>
-        <div class="d-flex justify-content-center bnt-dark-mode">
-        <input type="checkbox" class="checkbox" id="cbx">
-        <label for="cbx" class="label">
-          <i class="fas fa-moon"></i>
-          <i class="fas fa-sun"></i>
-          <div class="ball"></div>
-        </label>
-      </div>
+
    
   </body>
 </html>
