--- a/manutencao-diaria.html
+++ b/manutencao-diaria.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+         <!-- Link Bootstrap -->
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+         <!-- Link CSS -->
+         <link rel="stylesheet" href="CSS/style.css" />
+         <!-- Link icone -->
+         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-********************" crossorigin="anonymous">
+         <!-- Link favicon -->
+         <link rel="shortcut icon" href="SVGs/computer_monitor_pc_hardware_screen_icon_142007.ico" type="image/x-icon" >
+    <title>Planilhas de manutenção diária</title>
 </head>
+
 <body>
-<p>Manutenção diária</p>
+
+<header>
+    <h2>Planilhas de manutenção diária</h2>
+</header>
+
+    <nav class="planilha">
+        <a href=""><button>Pl 01 - Ricota, mussarela e salas de embalagem</button></a>
+        <a href=""><button>Pl 02 - Área externa</button></a>
+    </nav>
+
+<footer class=" py-4">
+    <section class="text-center">
+        <p class="mb-0">&copy; 2023. Todos os direitos reservados.</p>
+        <p class="mb-0">Desenvolvido por <a href="https://github.com/LBeraldi" target="_blank" class="">Lucas Beraldi</a></p>
+    </section>
+</footer>  
+
 </body>
 </html>
