--- a/login.html
+++ b/login.html
@@ -9,42 +9,55 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <!-- Link icone -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-********************" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-********************" crossorigin="anonymous">
+    <!-- Link favicon -->
+    <link rel="shortcut icon" href="SVGs/computer_monitor_pc_hardware_screen_icon_142007.ico" type="image/x-icon" >    
    <title>Página de login</title>
   </head>
-  <body>
-    <div class="container">
-      <h2>Login</h2>
+
+<body>
+<main>
+  <section class="login">
+    <h2>Login</h2>
+
+    <form action="">
+      <input
+        type="text"
+        placeholder="Nome de usuário"
+        class="input-user"
+        required
+      ></input>
+      <input
+        type="password"
+        placeholder="Senha"
+        class="input-senha"
+        required
+      ></input>
+      <input type="submit" value="Entrar" />
+    </form>
+
+    <section>
       <form action="">
-        <input
-          type="text"
-          placeholder="Nome de usuário"
-          class="input-user" 
-          required
-        ></input>
-        <input
-          type="password"
-          placeholder="Senha"
-          class="input-senha"
-          required
-        ></input>
-        <input type="submit" value="Entrar" />
+        <section class="d-flex justify-content-center icones">
+          <button type="button" class="btn rounded-circle"><i class="bi bi-google"></i></button>
+          <button type="button" class="btn rounded-circle"><i class="bi bi-facebook"></i></button>
+        </section>
       </form>
-      
-      <div>
-        <form action="">
-          <div class="d-flex justify-content-center my-custom-btn">
-            <button type="button" class="btn rounded-circle"><i class="bi bi-google"></i></button>
-            <button type="button" class="btn rounded-circle"><i class="bi bi-facebook"></i></button>
-          </div>
-        </form>
 
-        <div class="d-flex justify-content-center my-custom-div">
-          <a href="" class="">Cadastre-se</a>
-          <a href="" class="">Esqueci minha senha</a>
-        </div>
+      <section class="d-flex justify-content-center auxiliares-login">
+        <a href="" class="">Cadastre-se</a>
+        <a href="" class="">Esqueci minha senha</a>
+      </section>
 
+  </section>
+</main>
 
-   
-  </body>
+<footer class="py-4">
+  <section class="text-center">
+    <p class="mb-0">&copy; 2023. Todos os direitos reservados.</p>
+    <p class="mb-0">Desenvolvido por <a href="https://github.com/LBeraldi" target="_blank" class="">Lucas Beraldi</a></p>
+  </section>
+</footer>  
+ 
+</body>
 </html>
