--- a/index.html
+++ b/index.html
@@ -1,52 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- Link Bootstrap -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-     <!-- Link CSS -->
-     <link rel="stylesheet" href="CSS/style.css" />
-     <!-- Link icone -->
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-********************" crossorigin="anonymous">
-    <!-- Link favicon -->
-    <link rel="shortcut icon" href="SVGs/computer_monitor_pc_hardware_screen_icon_142007.ico" type="image/x-icon" >
-    <title>Página inicial</title>
+        <!-- Link Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <!-- Link CSS -->
+        <link rel="stylesheet" href="CSS/style.css" />
+        <!-- Link icone -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-********************" crossorigin="anonymous">
+        <!-- Link favicon -->
+        <link rel="shortcut icon" href="SVGs/computer_monitor_pc_hardware_screen_icon_142007.ico" type="image/x-icon" >    
+    <title>Document</title>
 </head>
-
 <body>
     <header>
-        <h2>Bem-vindo ao nosso site de planilhas, onde a organização <br> e a eficiência se encontram em uma só plataforma!</h2> 
+        <div class="circle"></div>
+        <h3>Bem-vindo ao nosso site de planilhas, onde a organização <br> e a eficiência se encontram em uma só plataforma!</h3>
     </header>
-<main>
-    <nav class="planilha">
-        <section class="link-planilhas">
-            <a href="manutencao-diaria.html" target="_blank"><button>Manutenção diária</button></a>
-            <a href="" target="_blank"><button>Iluminação mensal</button></a>
-            <a href="" target="_blank"><button>Ventilação mensal</button></a>
-            <a href="" target="_blank"><button>Água de abastecimento</button></a>
-            <a href="" target="_blank"><button>Água residual</button></a>
-            <a href="" target="_blank"><button>Controle de pragas</button></a>
-            <a href="" target="_blank"><button>PPHO</button></a>
-            <a href="" target="_blank"><button>Hábitos de higiêne</button></a>
-            <a href="" target="_blank"><button>PSO</button></a>
-            <a href="" target="_blank"><button>Controle de matéria prima</button></a>
-            <a href="" target="_blank"><button>Controle de temperatura</button></a>
-            <a href="" target="_blank"><button>Calibração dos equipamentos</button></a>
-            <a href="" target="_blank"><button>APPCC</button></a>
-            <a href="" target="_blank"><button>Análises laboratoriais</button></a>
-            <a href="" target="_blank"><button>Recall dos produtos</button></a>
-        </section>
-    </nav>
 
-    <section class="conteudo">
-            <h3>O que este site faz por você?</h3>
-            <p>Aqui, oferecemos uma solução abrangente para ajudar você a lidar com a complexidade <br> dos dados, simplificando a sua vida e aumentando a sua produtividade.</p>
-            <p>Nossa plataforma foi projetada para atender às necessidades de profissionais, estudantes, <br> empreendedores e qualquer pessoa que trabalhe com informações e queira otimizar <br> o gerenciamento e a análise de dados.</p>
-    </section>
+    <div class="container"><a href="meus-arquivos.html" target="_blank">Meus arquivos <p>Entre e faça o download de suas planilhas ja preenchidas</p></a></div>
+    <div class="container"><a href="">Planilhas <p>Preencha suas planilhas </p></a></div>
+    <div class="container"><a href="">Cadastrar área <p>Faça o cadastro da área/tipo de sua empresa</p></a></div>
+    <div class="container"><a href="">Configuração de conta <p>Faça a configuração de sua conta por aqui</p></a></div>
 
-</main>
     <footer class="text-light py-4">
         <section class="text-center">
             <p class="mb-0">&copy; 2023. Todos os direitos reservados.</p>
