--- a/pages/planilhas.html
+++ b/pages/planilhas.html
@@ -6,7 +6,7 @@
      <!-- Link Bootstrap -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
      <!-- Link CSS -->
-     <link rel="stylesheet" href="CSS/style.css" />
+     <link rel="stylesheet" href="../styles/style.css" />
      <!-- Link icone -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"/>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-********************" crossorigin="anonymous">
